[gd_scene load_steps=5 format=3 uid="uid://c757qtqwmyrb5"]

[ext_resource type="Script" uid="uid://d0mmva72vvmh" path="res://pipe/pipe.gd" id="1_bepn3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxxyv"]
size = Vector2(16, 15.999999)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxrpf"]
size = Vector2(16.000004, 16)

[sub_resource type="Curve2D" id="Curve2D_hxrpf"]

[node name="pipe" type="Node2D"]
script = ExtResource("1_bepn3")
head1_direction = 3
head2_direction = 2

[node name="Head1" type="Area2D" parent="."]
position = Vector2(-32, 0)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head1"]
shape = SubResource("RectangleShape2D_yxxyv")
debug_color = Color(0, 0.62380296, 0.5372975, 0.41960785)

[node name="Head2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Head2"]
shape = SubResource("RectangleShape2D_hxrpf")
debug_color = Color(0.9593739, 0, 0.52466154, 0.41960785)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_hxrpf")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotates = false
loop = false

[connection signal="body_entered" from="Head1" to="." method="_on_head_1_entered"]
[connection signal="body_exited" from="Head1" to="." method="_reset_enterance_duration"]
[connection signal="body_entered" from="Head2" to="." method="_on_head_2_entered"]
[connection signal="body_exited" from="Head2" to="." method="_reset_enterance_duration"]
